# agentic-control-plane

./: .gitignore  README.md  pyproject.toml  run_tests.sh
agents/k8s_debug_agent/: .env.template  Dockerfile  README.md  a2a_agent.py  pyproject.toml
agents/k8s_debug_agent/k8s_debug_agent/: agents.py  config.py  data_types.py  llm.py  main.py  prompts.py
agents/source_code_analyzer/: .pre-commit-config.yaml  README.md  a2a_agent.py  pyproject.toml
agents/source_code_analyzer/source_code_analyzer/: agents.py  config.py  data_types.py  event.py  llm.py  main.py  prompts.py  utils.py
deploy/a2a-bridge/: 01-namespace.yaml  02-rbac.yaml  03-deployment.yaml  04-service.yaml
deploy/k8s-debug-agent/: 01-namespace.yaml  02-serviceaccount.yaml  03-service.yaml  04-deployment.yaml  05-agent.yaml
deploy/k8s-readonly-server/: 00-namespace.yaml  01-serviceaccount.yaml  02-clusterrole.yaml  03-clusterrolebinding.yaml  04-deployment.yaml  05-service.yaml  README.md  kustomization.yaml
src/mcp/a2a_bridge/: __init__.py  requirements.txt  server.py
src/mcp/a2a_bridge/deploy/base/: authconfig.yaml  authorino-instance.yaml  authorino-operator.yaml  gateway-authz-envoyfilter.yaml  keycloak-alias-service.yaml  kustomization.yaml  mcp-server-buildconfig.yaml  mcp-server-deployment.yaml  (+6 more)
src/mcp/a2a_bridge/lib/: a2a.py  auth.py  discovery.py
src/mcp/a2a_bridge/scripts/: configure_openshift_oidc.sh  deploy_mcp_bridge_auth.sh  setup_mcp_keycloak_client.py
tools/a2a_bridge_server/: Dockerfile
tools/a2a_bridge_server/lib/: a2a.py
tools/k8s_readonly_server/: build.sh  server.py
(+1 files in other folders)
